fix .jar, change from file to inputstream